Fetch and create highlights on Notion
- Introduce Notion client using Retrofit
- Query a Notion database discovering pages and highlights
- Create a Notion page with hightlights